<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@drawable/wave_education"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".EducationActivity">
    <ImageView
        android:id="@+id/image"
        android:layout_width="283dp"
        android:layout_height="254dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/jitu"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="55sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="EDUCATION"/>
    <View
        android:layout_width="290dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:textColor="@color/black"
       android:text="@string/MT"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/HS"
        android:textColor="@color/black"
        android:textSize="19sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:padding="5dp"
        android:textColor="@color/black"
        android:text="@string/BCA"/>


</LinearLayout>