<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wave_profile"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="283dp"
        android:layout_height="254dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/jitu"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="55sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="PROFILE"/>
    <View
        android:layout_width="210dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:text="@string/PR"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="82dp"
        android:layout_marginLeft="10dp"
        android:text="@string/PR1"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/PR2"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />


</LinearLayout>