<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/wave_contact"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity">
    <ImageView
        android:id="@+id/image"
        android:layout_width="283dp"
        android:layout_height="254dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/jitu"
        tools:ignore="ContentDescription" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="55sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="CONTACT"/>
    <View
        android:layout_width="230dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="@color/black"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/PHONE"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/EMAIL"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/ADD"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold" />


</LinearLayout>